2008-05-06  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: Try again with an error message when Shlibs is missing an entry, explaining what to do for both public and private shlibs.

2008-05-01  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Allow %p/Library/Frameworks

2008-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Shlibs error should list install_name, not actual filename

2008-03-21  Alexander Hansen <akh@finkproject.org>

	* Bootstrap.pm:  recognize 9.2.2 Darwin kernel--noted by gecko2 on IRC for a late 2007 Macbook.

2008-03-10  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Don't rely on beta versions of fink itself

2008-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: rarian-compat is replacing scrollkeeper

2008-03-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't create blank shlibs files in .deb

2008-02-29  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Wildcard in directory-components in Files breaks
	system(install)

2008-02-17  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.5.2

2008-02-06  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: undef is possible return from package_from_pkgconfig

2008-01-14  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Better toleration of whitespace in .info Shlibs field

2008-01-12  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: rarian-compat is new version of scrollkeeper in pangocairo

2008-01-02  Daniel Macks  <dmacks@netspace.org>

	* CheckSum/*.pm, Finally/*.pm, Notify/*.pm, SelfUpdate/*.pm, Text/*.pm, version/*.pm, *.pm, FinkVersion.pm.in: updated Copyright notice

2007-12-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Complain if a .la contains -framework not in -Wl,

2007-11-24  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Tell user if overriding the DownloadMethod pref.

2007-11-24  Daniel Macks  <dmacks@netspace.org>
