@@ -1,3 +1,7 @@
+2008-05-07  Dave Morrison  <drm@finkproject.org>
+
+	* Validation.pm: Improve the Shlibs error message
+
 2008-05-06  Dave Morrison  <drm@finkproject.org>
 
 	* Validation.pm: Try again with an error message when Shlibs is missing an entry, explaining what to do for both public and private shlibs.
